--- a/XdmfUtil/CMakeLists.txt
+++ b/XdmfUtil/CMakeLists.txt
@@ -5,10 +5,6 @@ CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
 IF(COMMAND CMAKE_POLICY)
   CMAKE_POLICY(SET CMP0003 NEW)
 ENDIF(COMMAND CMAKE_POLICY)
-
-CONFIGURE_FILE(
-  ${CMAKE_CURRENT_SOURCE_DIR}/XdmfUtilconfig.h.in
-  ${CMAKE_CURRENT_BINARY_DIR}/XdmfUtilconfig.h)
   
 #--------------------------------------------------
 # Load ParaView env
@@ -17,6 +13,16 @@ IF(NOT USE_H5FD_DSM)
   IF(NOT PARAVIEW_LOADED)
     FIND_PACKAGE(ParaView REQUIRED)
     INCLUDE(${PARAVIEW_USE_FILE})
+    INCLUDE(${PARAVIEW_VTK_DIR}/VTKConfig.cmake)
+    IF (ParaView_BINARY_DIR)
+      INCLUDE_DIRECTORIES(
+        ${ParaView_CMAKE_DIR}/../Utilities/Xdmf2/libsrc
+        ${ParaView_BINARY_DIR}/Utilities/Xdmf2/libsrc
+      )
+    ENDIF(ParaView_BINARY_DIR)
+    IF(VTK_USE_MPI)
+      SET(USE_MPI 1)
+    ENDIF(VTK_USE_MPI)
     SET(PARAVIEW_LOADED 1)
   ELSE(NOT PARAVIEW_LOADED)
     IF (PARAVIEW_BUILD_QT_GUI)
@@ -28,6 +34,9 @@ IF(NOT USE_H5FD_DSM)
       ${VTK_INCLUDE_DIR}
       ${MPI_INCLUDE_PATH}
     )
+    IF(VTK_USE_MPI)
+      SET(USE_MPI 1)
+    ENDIF(VTK_USE_MPI)
     IF (VTK_USE_SYSTEM_LIBXML2)
       INCLUDE_DIRECTORIES(
         ${LIBXML2_INCLUDE_DIR}
@@ -35,6 +44,8 @@ IF(NOT USE_H5FD_DSM)
     ELSE (VTK_USE_SYSTEM_LIBXML2)
       INCLUDE_DIRECTORIES(
         ${ParaView_BINARY_DIR}/VTK/Utilities/vtklibxml2
+        ${ParaView_CMAKE_DIR}/../Utilities/Xdmf2/libsrc
+        ${ParaView_BINARY_DIR}/Utilities/Xdmf2/libsrc
       )
     ENDIF (VTK_USE_SYSTEM_LIBXML2)
   ENDIF(NOT PARAVIEW_LOADED)
@@ -65,6 +76,10 @@ IF(VTK_BUILD_SHARED_LIBS OR BUILD_SHARED_LIBS)
 ELSE(VTK_BUILD_SHARED_LIBS OR BUILD_SHARED_LIBS)
   SET(XdmfUtil_LIBTYPE STATIC)
 ENDIF(VTK_BUILD_SHARED_LIBS OR BUILD_SHARED_LIBS)
+
+CONFIGURE_FILE(
+  ${CMAKE_CURRENT_SOURCE_DIR}/XdmfUtilconfig.h.in
+  ${CMAKE_CURRENT_BINARY_DIR}/XdmfUtilconfig.h)
 
 ADD_LIBRARY(XdmfUtil ${XdmfUtil_LIBTYPE} ${XdmfUtil_SRCS})
 TARGET_LINK_LIBRARIES(XdmfUtil Xdmf vtksys)
