Fix path change to lowercase hdf5_hl and add hdf5_hl to link

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,12 +13,6 @@ IF(NOT PARAVIEW_LOADED)
   FIND_PACKAGE(ParaView REQUIRED)
   INCLUDE(${PARAVIEW_USE_FILE})
   INCLUDE(${PARAVIEW_VTK_DIR}/VTKConfig.cmake)
-  IF (ParaView_BINARY_DIR)
-  INCLUDE_DIRECTORIES(
-    ${ParaView_CMAKE_DIR}/../Utilities/H5FDdsm
-    ${ParaView_BINARY_DIR}/Utilities/H5FDdsm
-  )
-  ENDIF(ParaView_BINARY_DIR)
   SET(PARAVIEW_LOADED 1)
 ELSE(NOT PARAVIEW_LOADED)
   IF (PARAVIEW_BUILD_QT_GUI)
@@ -46,6 +40,15 @@ ELSE(NOT PARAVIEW_LOADED)
     ${ParaView_BINARY_DIR}/Utilities/H5FDdsm
   )
 ENDIF(NOT PARAVIEW_LOADED)
+
+IF (ParaView_BINARY_DIR)
+INCLUDE_DIRECTORIES(
+  ${ParaView_CMAKE_DIR}/../Utilities/h5fddsm
+  ${ParaView_BINARY_DIR}/Utilities/h5fddsm
+  ${ParaView_CMAKE_DIR}/../Utilities/hdf5/hl/src
+ )
+ENDIF(ParaView_BINARY_DIR)
+
 
 #--------------------------------------------------
 # Find and Use Boost
@@ -150,7 +153,8 @@ ADD_PARAVIEW_PLUGIN(
 
 TARGET_LINK_LIBRARIES(
   CSCS_DSM
-    H5FDdsm    
+    H5FDdsm
+    hdf5_hl
     Xdmf
     XdmfUtil
     ${PARAVIEW_HDF5_LIBRARIES} 
@@ -176,7 +180,7 @@ ADD_SUBDIRECTORY(Testing)
 # Converter
 #--------------------------------------------------
 
-SET(Converter_LIBS CSCS_DSM)
+SET(Converter_LIBS CSCS_DSM hdf5_hl)
 
 IF(CSCS_PLUGIN_CFX)
   MESSAGE("Xdmf converter supporting CFX " ${CSCS_CFX_DIR})
