Update headers - Fix Generator to no longer crash when a requested array does not exist in the HDF5 file - Add QTreeWidgetView of the XDMF config file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -156,6 +156,7 @@ ADD_PARAVIEW_PLUGIN(
   GUI_INTERFACES 
     ${DSM_IFACE}
   GUI_SOURCES
+    ${CMAKE_CURRENT_SOURCE_DIR}/vtkXdmfSteeringParser.cxx
     ${CMAKE_CURRENT_SOURCE_DIR}/${DSM_PANEL_CLASS}.cxx
     ${DSM_IFACE_SRCS}
     ${DSM_MOC_SRCS}
