Tidy up the XML and Qt resources to make maintenance of individual classes easier

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,14 +86,16 @@ ADD_PARAVIEW_PLUGIN(
   "1.0" 
 
   SERVER_MANAGER_XML 
-    ${CMAKE_CURRENT_SOURCE_DIR}/CSCS_DSMManager_Server.xml
+    ${CMAKE_CURRENT_SOURCE_DIR}/vtkDSMManager.xml
+    ${CMAKE_CURRENT_SOURCE_DIR}/vtkXdmfReader4.xml
+    ${CMAKE_CURRENT_SOURCE_DIR}/vtkXdmfWriter4.xml
   SERVER_MANAGER_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/vtkDSMManager.cxx
     ${CMAKE_CURRENT_SOURCE_DIR}/vtkXdmfWriter4.cxx
     ${CMAKE_CURRENT_SOURCE_DIR}/vtkXdmfReader4.cxx
   SERVER_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/H5MButil.cxx
-    ${CMAKE_CURRENT_SOURCE_DIR}/XdmfH5MBCallback.cxx    
+    ${CMAKE_CURRENT_SOURCE_DIR}/XdmfH5MBCallback.cxx
   GUI_INTERFACES 
     ${DSM_IFACE}
   GUI_SOURCES
@@ -103,8 +105,9 @@ ADD_PARAVIEW_PLUGIN(
     ${DSM_MOC_SRCS}
     ${DSM_UI_SOURCES}
   GUI_RESOURCES
-    ${CMAKE_CURRENT_SOURCE_DIR}/CSCS_DSMManager.qrc
+    ${CMAKE_CURRENT_SOURCE_DIR}/IcarusQtResources.qrc
   GUI_RESOURCE_FILES
+    ${CMAKE_CURRENT_SOURCE_DIR}/Filters.xml
     ${CMAKE_CURRENT_SOURCE_DIR}/${DSM_PANEL_CLASS}.ui
 )
 
