Put back option to allow the use of the testing panel

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,11 +53,11 @@ INCLUDE_DIRECTORIES(
 #--------------------------------------------------
 IF(PARAVIEW_BUILD_QT_GUI)
   OPTION(CSCS_DSM_BUILD_TESTING "Build DSM plugin testing" OFF)
-#  IF(CSCS_DSM_BUILD_TESTING)
-#    SET(DSM_PANEL_CLASS pqDSMViewerPanel_testing)
-#  ELSE(CSCS_DSM_BUILD_TESTING)
+  IF(CSCS_DSM_BUILD_TESTING)
+    SET(DSM_PANEL_CLASS pqDSMViewerPanel_testing)
+  ELSE(CSCS_DSM_BUILD_TESTING)
     SET(DSM_PANEL_CLASS pqDSMViewerPanel)
-#  ENDIF(CSCS_DSM_BUILD_TESTING)
+  ENDIF(CSCS_DSM_BUILD_TESTING)
 
   QT4_WRAP_CPP(
     DSM_MOC_SRCS 
