--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,9 @@ IF(NOT PARAVIEW_LOADED)
   INCLUDE(${PARAVIEW_USE_FILE})
   INCLUDE(${PARAVIEW_VTK_DIR}/VTKConfig.cmake)
   SET(PARAVIEW_LOADED 1)
+  INCLUDE_DIRECTORIES(${MPI_INCLUDE_PATH})
 ELSE(NOT PARAVIEW_LOADED)
+# This is apparently no longer required
   IF (PARAVIEW_BUILD_QT_GUI)
     INCLUDE(${QT_USE_FILE})
   ENDIF (PARAVIEW_BUILD_QT_GUI)
