Add XdmfSteeringProperty and subclasses - Add automatic generation of SpinBoxes when parsing the XML interaction file - Add IntScalarInteraction and IntScalarInteractionName properties to DSM Manager proxy - Add first handles of interactions in the parser - Add advanced controls field in the GUI in devel tab - Rename vtkXdmfSteeringParser to XdmfSteeringParser - Update XdmfGenerator to new branch reference - xxxDomain flags in the XML interaction description file are not yet supported

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,7 +101,10 @@ ADD_PARAVIEW_PLUGIN(
   GUI_INTERFACES 
     ${DSM_IFACE}
   GUI_SOURCES
-    ${CMAKE_CURRENT_SOURCE_DIR}/vtkXdmfSteeringParser.cxx
+    ${CMAKE_CURRENT_SOURCE_DIR}/XdmfSteeringParser.cxx
+    ${CMAKE_CURRENT_SOURCE_DIR}/XdmfSteeringProperty.cxx
+    ${CMAKE_CURRENT_SOURCE_DIR}/XdmfSteeringVectorProperty.cxx
+    ${CMAKE_CURRENT_SOURCE_DIR}/XdmfSteeringIntVectorProperty.cxx
     ${CMAKE_CURRENT_SOURCE_DIR}/${DSM_PANEL_CLASS}.cxx
     ${DSM_IFACE_SRCS}
     ${DSM_MOC_SRCS}
