Move code for internal pipeline into helper class
vtkCustomPipelineHelper created to hold a mini-pipeline and make the
management a little easier. provide some basic functions for setting input etc
and making the pipeline visible.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,6 +108,7 @@ ADD_PARAVIEW_PLUGIN(
   SERVER_SOURCES
     ${ENCODED_FILTERS}
     ${CMAKE_CURRENT_SOURCE_DIR}/vtkDSMProxyHelper.cxx
+    ${CMAKE_CURRENT_SOURCE_DIR}/vtkCustomPipelineHelper.cxx
     ${CMAKE_CURRENT_SOURCE_DIR}/H5MButil.cxx
     ${CMAKE_CURRENT_SOURCE_DIR}/XdmfH5MBCallback.cxx
   GUI_INTERFACES 
