Enable multiple 3D widgets to different blocks and flatten each extracted block
We don't want Multiblock outputs for each extracted block, so flatten them to
simple datasets. Enable multiple 3D widget pipelines to be created and store
each in a vector inside the Panel.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,10 +102,12 @@ ADD_PARAVIEW_PLUGIN(
     ${CMAKE_CURRENT_SOURCE_DIR}/vtkDSMManager.xml
     ${CMAKE_CURRENT_SOURCE_DIR}/vtkXdmfReader4.xml
     ${CMAKE_CURRENT_SOURCE_DIR}/vtkXdmfWriter4.xml
+    ${CMAKE_CURRENT_SOURCE_DIR}/vtkFlattenOneBlock.xml
   SERVER_MANAGER_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/vtkDSMManager.cxx
     ${CMAKE_CURRENT_SOURCE_DIR}/vtkXdmfWriter4.cxx
     ${CMAKE_CURRENT_SOURCE_DIR}/vtkXdmfReader4.cxx
+    ${CMAKE_CURRENT_SOURCE_DIR}/vtkFlattenOneBlock.cxx
   SERVER_SOURCES
     ${ENCODED_FILTERS}
     ${CMAKE_CURRENT_SOURCE_DIR}/vtkDSMProxyHelper.cxx
