Fix crash when running in parallel
When extracting a single block, if a certain process has no data
we need to insert a dummy empty dataset (of the right type).
This fix should solve that problem by getting the type from the template
and using at pipeline instantiation time to fix the FlattenOneBlock Filter

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,8 +85,8 @@ IF(PARAVIEW_BUILD_QT_GUI)
 ENDIF(PARAVIEW_BUILD_QT_GUI)
 
 encode_files_as_strings(ENCODED_FILTERS
-  ${CMAKE_CURRENT_SOURCE_DIR}/CustomFilter_TransformBlock.cpd
-  ${CMAKE_CURRENT_SOURCE_DIR}/CustomFilter_XdmfReaderBlock.cpd
+  ${CMAKE_CURRENT_SOURCE_DIR}/CustomFilter_TransformBlock.xml
+  ${CMAKE_CURRENT_SOURCE_DIR}/CustomFilter_XdmfReaderBlock.xml
 )
 
 MESSAGE("${ENCODED_FILTERS}")
