add GetDsmIsConnected/WaitForConnected/WaitForUpdateReady in vtkDsmManager - Start to replace timer with thread - Fix hdf5_hl lib dependency again

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,6 +107,12 @@ ADD_PARAVIEW_PLUGIN(
     ${CMAKE_CURRENT_SOURCE_DIR}/${DSM_PANEL_CLASS}.ui
 )
 
+TARGET_LINK_LIBRARIES(
+  CSCS_DSM
+    ${PARAVIEW_HDF5_LIBRARIES}_hl
+    XdmfGenerator
+)
+
 #--------------------------------------------------
 # XdmfGenerator
 #--------------------------------------------------
