no need for all tools to link against hdf5_hl

--- a/Tools/CMakeLists.txt
+++ b/Tools/CMakeLists.txt
@@ -8,7 +8,7 @@ IF(COMPUTERNAME)
   ADD_DEFINITIONS(-DMACHINE_$ENV{COMPUTERNAME})
 ENDIF(COMPUTERNAME)
 
-SET(Converter_LIBS CSCS_DSM hdf5_hl)
+SET(Converter_LIBS CSCS_DSM)
 
 IF(CSCS_PLUGIN_CFX)
   MESSAGE("Xdmf converter supporting CFX " ${CSCS_CFX_DIR})
