DSM compiling and working in serial mode under 3.14
Some problems remain with parallel pvservers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,7 @@ IF(PARAVIEW_BUILD_QT_GUI)
   QT4_WRAP_CPP(
     DSM_MOC_SRCS 
       ${CMAKE_CURRENT_SOURCE_DIR}/${DSM_PANEL_CLASS}.h
+      ${CMAKE_CURRENT_SOURCE_DIR}/pqDsmObjectInspector.h
   )
 
   # invoke macro that adds the refinement and display controls panel
@@ -111,6 +112,7 @@ ADD_PARAVIEW_PLUGIN(
   GUI_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/XdmfSteeringParser.cxx
     ${CMAKE_CURRENT_SOURCE_DIR}/${DSM_PANEL_CLASS}.cxx
+    ${CMAKE_CURRENT_SOURCE_DIR}/pqDsmObjectInspector.cxx
     ${DSM_IFACE_SRCS}
     ${DSM_MOC_SRCS}
     ${DSM_UI_SOURCES}
