Fix plugin cmake config to find PV includes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,8 +14,18 @@ ENDIF(WIN32 AND MSVC)
 # Find and Use ParaView
 #--------------------------------------------------
 SET(QT_USE_QTNETWORK TRUE)
-FIND_PACKAGE(ParaView REQUIRED)
-INCLUDE(${PARAVIEW_USE_FILE})
+IF (ParaView_SOURCE_DIR)
+  INCLUDE(${QT_USE_FILE})
+  INCLUDE_DIRECTORIES(${HDF5_INCLUDE_DIR}
+    ${PARAVIEW_INCLUDE_DIRS}
+    ${PARAVIEW_GUI_INCLUDE_DIRS}
+    ${PARAVIEW_KWSYS_INCLUDE_DIRS}
+    ${VTK_INCLUDE_DIR}
+  )
+ELSE (ParaView_SOURCE_DIR)
+  FIND_PACKAGE(ParaView REQUIRED)
+  INCLUDE(${PARAVIEW_USE_FILE})
+ENDIF (ParaView_SOURCE_DIR)
 INCLUDE(${ParaView_BINARY_DIR}/Utilities/Xdmf2/XDMFConfig.cmake)
 INCLUDE_DIRECTORIES(${XDMF_MPI_INCLUDE_PATH} ${XDMF_LIBXML2_INCLUDE})
 
