Fix meshlesss includes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,8 +49,8 @@ ENDIF(WIN32 AND MSVC)
 # DSM H5Part Reader needs pv-meshless
 #--------------------------------------------------
 INCLUDE_DIRECTORIES(
-  ${CSCS_Plugins_SOURCE_DIR}/pv-meshless
-  ${CSCS_Plugins_SOURCE_DIR}/pv-meshless/h5part
+  ${CMAKE_CURRENT_SOURCE_DIR}/../pv-meshless
+  ${CMAKE_CURRENT_SOURCE_DIR}/../pv-meshless/h5part
 )
 
 #--------------------------------------------------
