Fix CMakeList to handle build without GUI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,11 +15,13 @@ ENDIF(WIN32 AND MSVC)
 #--------------------------------------------------
 SET(QT_USE_QTNETWORK TRUE)
 IF (ParaView_SOURCE_DIR)
-  INCLUDE(${QT_USE_FILE})
-  INCLUDE_DIRECTORIES(${HDF5_INCLUDE_DIR}
+  IF(PARAVIEW_BUILD_QT_GUI)
+    INCLUDE(${QT_USE_FILE})
+  ENDIF(PARAVIEW_BUILD_QT_GUI)
+  INCLUDE_DIRECTORIES(
+    ${HDF5_INCLUDE_DIR}
     ${PARAVIEW_INCLUDE_DIRS}
     ${PARAVIEW_GUI_INCLUDE_DIRS}
-    ${PARAVIEW_KWSYS_INCLUDE_DIRS}
     ${VTK_INCLUDE_DIR}
   )
 ELSE (ParaView_SOURCE_DIR)
